# multispatialCCM

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test_dod.py
DoD/: multspatialccm.md
docs/: API.md  INSTALL.md  METHOD.md
multispatialCCM/: __init__.py  _rust.py  backend.py  ccm.py  data.py  signal.py  simplex.py
scripts/: benchmark_backends.py
src/: lib.rs
tests/: test_rust_fallback.py  test_rust_parity_ccm.py  test_rust_parity_simplex.py
