[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multispatialccm"
version = "0.1.0"
description = "Pure-Python translation of the R multispatialCCM package (Convergent Cross Mapping)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]

[tool.hatch.build.targets.wheel]
packages = ["multispatialCCM"]
